# SatyaSetu

./: .gitignore  README.md  SatyaSetu.code-workspace  apple_vision_server.py  build_mobile.sh  migration_protocol.sh
flutter_app/: copy_rust_lib.sh  fix_project.sh  librust_core.dylib  pubspec.yaml
flutter_app/android/app/: build.gradle.kts
flutter_app/android/app/src/main/: AndroidManifest.xml
flutter_app/ios/: Podfile
flutter_app/ios/Flutter/: Debug.xcconfig  Release.xcconfig
flutter_app/ios/Runner/: Build Runner_2025-12-18T18-11-12.txt  Build Runner_2025-12-18T18-31-51.txt  Info.plist
flutter_app/ios/Runner.xcodeproj/: project.pbxproj
flutter_app/ios_corrupted_backup/: Podfile
flutter_app/ios_corrupted_backup/Flutter/: Debug.xcconfig  Release.xcconfig
flutter_app/ios_corrupted_backup/Runner/: Info.plist  bridge_generated.h
flutter_app/ios_corrupted_backup/Runner.xcodeproj/: project.pbxproj
flutter_app/lib/: bridge_generated.dart  identity_domain.dart  identity_repo.dart  identity_repo_native.dart  identity_repo_stub.dart  identity_repo_web.dart  main.dart
flutter_app/lib/models/: intent_models.dart  telemetry_models.dart
flutter_app/lib/screens/: mission_control_screen.dart
flutter_app/lib/services/: hardware_id_service.dart  intent_engine.dart  intent_harvester.dart  mission_control_service.dart  vault_service.dart  vision_service.dart
flutter_app/macos/: librust_core.dylib
flutter_app/macos/Flutter/: GeneratedPluginRegistrant.swift
flutter_app/macos/Runner/: DebugProfile.entitlements  Info.plist
flutter_app/macos/Runner.xcodeproj/: project.pbxproj
rust_core/: Cargo.toml  RustCore.podspec
rust_core/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs  crypto.rs  domain.rs  lib.rs  parser.rs  persistence.rs  service.rs  telemetry.rs
