[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
# Infrastructure & Bridge
flutter_rust_bridge = "1.82.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
once_cell = "1.18"

# Crypto & Identity
chacha20poly1305 = "0.10"
argon2 = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.10"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
ed25519-dalek = { version = "2.1", features = ["serde", "rand_core"] }

# PHASE 6: Decentralized Proof (Nostr SDK)
# Principal Design: Use multi-thread tokio to prevent FFI deadlocks.
nostr-sdk = { version = "0.36", default-features = false, features = ["all-nips"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "net"] }