# FILE: rust_core/Cargo.toml
# VERSION: 1.7.12
# PHASE: Phase 7 (Multi-Identity Derivation)

[package]
name = "rust_core"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
flutter_rust_bridge = "1.82.6"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
chacha20poly1305 = "0.10"
argon2 = "0.5"
uuid = { version = "1.4", features = ["v4"] }
rand = "0.8"
once_cell = "1.18"
tokio = { version = "1.28", features = ["full"] }
nostr-sdk = "0.26"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
regex = "1.9"
ring = "0.17"
ed25519-dalek = "1.0.1"